# GAIO.py

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  PHASE1_ARCHITECTURE_NOTES.md  PHASE2_ARCHITECTURE_NOTES.md  PHASE3_ARCHITECTURE_NOTES.md  README.md  box.py  boxgrid.py  environment.yml  pyproject.toml  structures.ipynb
benchmarks/: benchmark_imbalance.py  benchmark_phase3.py  benchmark_phase4.py  benchmark_phase5.py  benchmark_vs_julia.py  gaio_julia_benchmark.jl
docs/: ARCHITECTURE.md  LAMBDA_CLOUD_SETUP.md  PHASE4_ARCHITECTURE_NOTES.md  PHASE5_ARCHITECTURE_NOTES.md  VAST_AI_SETUP.md
gaio/: __init__.py
gaio/algorithms/: __init__.py  attractor.py  ftle.py  invariant_sets.py  manifolds.py  morse.py
gaio/core/: __init__.py  box.py  boxmeasure.py  boxset.py  partition.py
gaio/cuda/: __init__.py  accelerated_map.py  backends.py  cpu_backend.py  gpu_backend.py  rk4_cuda.py
gaio/examples/: __init__.py  _double_gyre.py  almost_invariant_sets.py  attractor.py  double_gyre_almost_invariant.py  double_gyre_coherent.py  double_gyre_ftle.py  four_wing.py  invariant_measure_1d.py  invariant_measure_2d.py  transfer_operator.py  unstable_manifold.py
gaio/graph/: __init__.py  boxgraph.py
gaio/maps/: __init__.py  base.py  grid_map.py  montecarlo_map.py  nonautonomous.py  rk4.py
gaio/mpi/: __init__.py  comm.py  decompose.py  distributed_attractor.py  distributed_eigs.py  gather.py  load_balance.py  rdma.py
gaio/transfer/: __init__.py  operator.py
references/: README.md  box.py  structures.ipynb
results/: phase3_vs_julia.json  phase4_2gpu.json  phase4_4gpu.json  phase4_8gpu.json  phase5_8gpu.json
tests/: conftest.py  test_mpi_scaling.py
(+16 files in other folders)
